--- a/ft_retriver/templates/ft_retriver/result.html
+++ b/ft_retriver/templates/ft_retriver/result.html
@@ -5,10 +5,13 @@
 
 <main role="main" class="container">
     <div class="alert alert-light" role="alert">
-        <h2> <span>&#128079;</span> 你想找的關鍵字：{{keyword}}</h2>
+        <h2><span>&#128079;</span> 你想找的關鍵字：{{keyword}}</h2>
     </div>
     <div class="alert alert-light" role="alert">
-        <span>&#128073;</span> 檔案 {{file_name}} 中一共有 {{numbers}} 篇含有標題與摘要的文章'
+        <span>&#128073;</span> 檔案 {{file_name}} 中一共有 {{numbers}} 篇含有標題與摘要的文章
+    </div>
+        <div class="alert alert-light" role="alert">
+        <span>&#128073;</span> 檔案 {{file_name}} 中一共有 {{hit}} 篇文章的標題或摘要中含有你想要的關鍵字
     </div>
     {% for as in artical_set%}
     <div class="card" style="margin-bottom: 10px;">
@@ -16,7 +19,12 @@
         <div class="card-body">
             <!--<h5 class="card-title">Special title treatment</h5>-->
             <p>{% autoescape off %} {{as.content}} {% endautoescape %}</p>
-
+            <div class="alert alert-warning" role="alert">
+                <span>&#128073;</span> 這篇標題中有 <span style="color:red;">{{as.keyword_title_hit}} </span>個關鍵字
+            </div>
+            <div class="alert alert-primary" role="alert">
+                <span>&#128073;</span> 這篇摘要中有 <span style="color:red;">{{as.keyword_content_hit}} </span>個關鍵字
+            </div>
             <div class="alert alert-primary" role="alert">
                 <span>&#128073;</span> 這篇摘要有 <span style="color:red;">{{as.character_content}}</span> 個字元
             </div>
@@ -26,12 +34,7 @@
             <div class="alert alert-primary" role="alert">
                 <span>&#128073;</span> 這篇摘要有 <span style="color:red;">{{as.sentence_content}} </span>個句子
             </div>
-            <div class="alert alert-primary" role="alert">
-                <span>&#128073;</span> 這篇標題有中 <span style="color:red;">{{as.keyword_title_hit}} </span>個關鍵字
-            </div>
-            <div class="alert alert-primary" role="alert">
-                <span>&#128073;</span> 這篇摘要有中 <span style="color:red;">{{as.keyword_content_hit}} </span>個關鍵字
-            </div>
+
         </div>
     </div>
     {% endfor %}
