--- a/ft_retriver/templates/ft_retriver/upload_xml.html
+++ b/ft_retriver/templates/ft_retriver/upload_xml.html
@@ -8,7 +8,7 @@
             Upload file to parse
         </div>
         <div class="card-body">
-            <h5 class="card-title">Select your Pubmed XML file</h5>
+            <h5 class="card-title">Select your Pubmed XML/Twitter Json file</h5>
             <div class="custom-file">
                 <form enctype="multipart/form-data" action="../uploadfile/" method="POST">
                     {% csrf_token %}
