--- a/ft_retriver/templates/ft_retriver/base.html
+++ b/ft_retriver/templates/ft_retriver/base.html
@@ -10,7 +10,7 @@
 
 <body style=" font-family:Microsoft JhengHei;">
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-    <a class="navbar-brand" href="#">Retriever</a>
+    <a class="navbar-brand" href="../hello">Retriever</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -18,13 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="../hello">Upload file</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="../hello">Upload files</a>
             </li>
         </ul>
     </div>
