add generate picture

--- a/ft_retriver/templates/ft_retriver/result3.html
+++ b/ft_retriver/templates/ft_retriver/result3.html
@@ -60,6 +60,7 @@
                         <li>這篇摘要有 <span style="color:red;">{{as.sentence_content}} </span>個句子</li>
                         <li>{{as.wordset}}</li>
                         <li>摘要中 有重要的字嗎?  {{as.common}}</li>
+                        <li>圖呢? <img src={{as.zipf_picture}}></li>
                     </ol>
                 </div>
                 {%endif%}
