add chart.js to drwa chart

--- a/ft_retriver/templates/ft_retriver/base2.html
+++ b/ft_retriver/templates/ft_retriver/base2.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="../commom_static/assets/theme/css/style.css">
     <link rel="preload" as="style" href="../commom_static/assets/mobirise/css/mbr-additional.css">
     <link rel="stylesheet" href="../commom_static/assets/mobirise/css/mbr-additional.css" type="text/css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+
 
 
 </head>
