--- a/ft_retriver/templates/ft_retriver/result3.html
+++ b/ft_retriver/templates/ft_retriver/result3.html
@@ -30,64 +30,101 @@
     <div class="container" style="font-family:Microsoft JhengHei;">
         {% for as in artical_set%}
         <div class="card" style="margin-bottom: 5px;">
-<!--            <h5 class="card-header"><b>{% autoescape off %} {{as.title}} {% endautoescape %}</b></h5>-->
+            <!--            <h5 class="card-header"><b>{% autoescape off %} {{as.title}} {% endautoescape %}</b></h5>-->
             <div class="card-header">
                 <a data-toggle="collapse" data-target="#collapse-{{ as.id }}"><h5>
-                   <i class="fas fa-chevron-down"></i>
-                   <b>{% autoescape off %} {{as.title}} {% endautoescape %}</b>
-               </h5>
-               </a>
-<!--                <h5>{% autoescape off %} {{as.title}} {% endautoescape %}-->
-<!--                    <button class="btn btn-primary btn-sm" type="button" data-toggle="collapse"-->
-<!--                            data-target="#collapse-{{ as.id }}" style="font-size: 10px;width:20px;height:30px;">+-->
-<!--                    </button>-->
-<!--                </h5>-->
+                    <i class="fas fa-chevron-down"></i>
+                    <b>{% autoescape off %} {{as.title}} {% endautoescape %}</b>
+                </h5>
+                </a>
+                <!--                <h5>{% autoescape off %} {{as.title}} {% endautoescape %}-->
+                <!--                    <button class="btn btn-primary btn-sm" type="button" data-toggle="collapse"-->
+                <!--                            data-target="#collapse-{{ as.id }}" style="font-size: 10px;width:20px;height:30px;">+-->
+                <!--                    </button>-->
+                <!--                </h5>-->
             </div>
             <div id="collapse-{{ as.id }}" class="panel-collapse collapse">
-            <div class="card-body">
-                <!--<h5 class="card-title">Special title treatment</h5>-->
-                <p>{% autoescape off %} {{as.content}} {% endautoescape %}</p>
+                <div class="card-body">
+                    <!--<h5 class="card-title">Special title treatment</h5>-->
+                    <p>{% autoescape off %} {{as.content}} {% endautoescape %}</p>
 
-                {% if type == 'xml' %}
-                <div class="alert alert-success" role="alert" style="color:black;">
-                    <h4 class="alert-heading">-關於這篇文章的詳細資訊-</h4>
-                    <hr>
-                    <ol style="list-style-type:lower-roman;">
-                        <li>這篇標題中有 <span style="color:red;">{{as.keyword_title_hit}} </span>個關鍵字</li>
-                        <li>這篇摘要中有 <span style="color:red;">{{as.keyword_content_hit}} </span>個關鍵字</li>
-                        <li>這篇摘要有 <span style="color:red;">{{as.character_content}}</span> 個字元</li>
-                        <li>這篇摘要有 <span style="color:red;">{{as.word_content}}</span> 個詞</li>
-                        <li>這篇摘要有 <span style="color:red;">{{as.sentence_content}} </span>個句子</li>
-                        <li>{{as.wordset}}</li>
-                        <li>摘要中 有重要的字嗎?  {{as.common}}</li>
-                        <li>圖呢? <img src={{as.zipf_picture}}></li>
-                    </ol>
+                    {% if type == 'xml' %}
+                    <div class="alert alert-light" role="alert" style="color:black;">
+                        <h4 class="alert-heading">-關於這篇文章的詳細資訊-</h4>
+                        <hr>
+                        <ol style="list-style-type:lower-roman;">
+                            <li>這篇標題中有 <span style="color:red;">{{as.keyword_title_hit}} </span>個關鍵字</li>
+                            <li>這篇摘要中有 <span style="color:red;">{{as.keyword_content_hit}} </span>個關鍵字</li>
+                            <li>這篇摘要有 <span style="color:red;">{{as.character_content}}</span> 個字元</li>
+                            <li>這篇摘要有 <span style="color:red;">{{as.word_content}}</span> 個詞</li>
+                            <li>這篇摘要有 <span style="color:red;">{{as.sentence_content}} </span>個句子</li>
+                            <li>{{as.wordset}}</li>
+                            <li>摘要中 有重要的字嗎? {{as.common}}</li>
+                            <li>摘要中 有重要的字嗎? {{as.value}}</li>
+                            <!--                        <li>圖呢? <img src={{as.zipf_picture}}></li>-->
+                            <li>
+                                <canvas id="{{ as.id }}" width="400" height="200"></canvas>
+                                <script>
+                                    var ctx = document.getElementById('{{ as.id | safe }}');
+                                    var myChart = new Chart(ctx, {
+                                        type: 'line',
+                                        data: {
+                                            labels: {{as.words|safe}},
+                                            datasets: [{
+                                                label: '# of Votes',
+                                                data: {{as.value|safe}},
+                                                backgroundColor: [
+                                                    'rgba(255, 140, 0, 0.5)'
+                                                ],
+                                                borderColor: [
+                                                    'rgba(255, 0, 255, 1)'
+                                                ],
+                                                borderWidth: 1
+                                            }]
+                                        },
+                                        options: {
+                                            scales: {
+                                                yAxes: [{
+                                                    ticks: {
+                                                        beginAtZero: true
+                                                    }
+                                                }]
+                                            },
+                                            title: {
+                                                display: true,
+                                                text:'The Zipf distribution of this article'
+                                            }
+                                        }
+                                    });
+                                </script>
+                            </li>
+                        </ol>
+                    </div>
+                    {%endif%}
+
+                    {% if type == 'json' %}
+                    <div class="alert alert-success" role="alert" style="color:black;">
+                        <h4 class="alert-heading">-關於這篇推文的詳細資訊-</h4>
+                        <hr>
+                        <ol style="list-style-type:lower-roman;">
+                            <li>這篇推文有 <span style="color:red;">{{as.keyword_content_hit}} </span>個關鍵字</li>
+                            <li>這篇推文有 <span style="color:red;">{{as.character_content}} </span>個字元</li>
+                            <li>這篇推文有 <span style="color:red;">{{as.word_content}} </span>個詞</li>
+                            <li>這篇推文有 <span style="color:red;">{{as.sentence_content}} </span>個句子</li>
+                            <li>{{as.wordset}}</li>
+                            {% if as.tag != '' %}
+                            <li>Hashtag:{% autoescape off %}{{as.tag}}{% endautoescape %}</li>
+                            {%endif%}
+
+                            {% if as.http != '' %}
+                            <li>內含的url :{% autoescape off %}{{as.http}}{% endautoescape %}</li>
+                            {%endif%}
+                            <li>有重要的字嗎? {{as.common}}</li>
+                        </ol>
+                    </div>
+                    {%endif%}
                 </div>
-                {%endif%}
-
-                {% if type == 'json' %}
-                <div class="alert alert-success" role="alert" style="color:black;">
-                    <h4 class="alert-heading">-關於這篇推文的詳細資訊-</h4>
-                    <hr>
-                    <ol style="list-style-type:lower-roman;">
-                        <li>這篇推文有 <span style="color:red;">{{as.keyword_content_hit}} </span>個關鍵字</li>
-                        <li>這篇推文有 <span style="color:red;">{{as.character_content}} </span>個字元</li>
-                        <li>這篇推文有 <span style="color:red;">{{as.word_content}} </span>個詞</li>
-                        <li>這篇推文有 <span style="color:red;">{{as.sentence_content}} </span>個句子</li>
-                        <li>{{as.wordset}}</li>
-                        {% if as.tag != '' %}
-                        <li>Hashtag:{% autoescape off %}{{as.tag}}{% endautoescape %}</li>
-                        {%endif%}
-
-                        {% if as.http != '' %}
-                        <li>內含的url :{% autoescape off %}{{as.http}}{% endautoescape %}</li>
-                        {%endif%}
-                        <li>有重要的字嗎?  {{as.common}}</li>
-                    </ol>
-                </div>
-                {%endif%}
             </div>
-        </div>
         </div>
         {% endfor %}
     </div>
