--- a/ft_retriver/templates/ft_retriver/base2.html
+++ b/ft_retriver/templates/ft_retriver/base2.html
@@ -57,8 +57,8 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="../hello">
-                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>Upload File
+                    <a class="nav-link link text-white display-4" href="../text_distribution">
+                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>Articalset distribution
                     </a>
                 </li>
             </ul>
