--- a/ft_retriver/templates/ft_retriver/result3.html
+++ b/ft_retriver/templates/ft_retriver/result3.html
@@ -2,7 +2,6 @@
 {% load staticfiles %}
 
 {% block content %}
-
 <section class="engine"><a href="https://mobirise.info/m">site design templates</a></section>
 <section class="mbr-section content5 cid-rE83tuXctg mbr-parallax-background" id="content5-8">
     <div class="container">
@@ -37,11 +36,6 @@
                     <b>{% autoescape off %} {{as.title}} {% endautoescape %}</b>
                 </h5>
                 </a>
-                <!--                <h5>{% autoescape off %} {{as.title}} {% endautoescape %}-->
-                <!--                    <button class="btn btn-primary btn-sm" type="button" data-toggle="collapse"-->
-                <!--                            data-target="#collapse-{{ as.id }}" style="font-size: 10px;width:20px;height:30px;">+-->
-                <!--                    </button>-->
-                <!--                </h5>-->
             </div>
             <div id="collapse-{{ as.id }}" class="panel-collapse collapse">
                 <div class="card-body">
@@ -60,18 +54,16 @@
                             <li>這篇摘要有 <span style="color:red;">{{as.sentence_content}} </span>個句子</li>
                             <li>{{as.wordset}}</li>
                             <li>摘要中 有重要的字嗎? {{as.common}}</li>
-                            <li>摘要中 有重要的字嗎? {{as.value}}</li>
-                            <!--                        <li>圖呢? <img src={{as.zipf_picture}}></li>-->
                             <li>
-                                <canvas id="{{ as.id }}" width="400" height="200"></canvas>
+                                <canvas id="{{ as.ca_id_xml }}" width="400" height="200"></canvas>
                                 <script>
-                                    var ctx = document.getElementById('{{ as.id | safe }}');
+                                    var ctx = document.getElementById('{{ as.ca_id_xml | safe }}');
                                     var myChart = new Chart(ctx, {
                                         type: 'line',
                                         data: {
                                             labels: {{as.words|safe}},
                                             datasets: [{
-                                                label: '# of Votes',
+                                                label: 'area',
                                                 data: {{as.value|safe}},
                                                 backgroundColor: [
                                                     'rgba(255, 140, 0, 0.5)'
@@ -98,12 +90,92 @@
                                     });
                                 </script>
                             </li>
+                            <li>
+                                <canvas id="{{as.ca_id_xml_p}}" width="400" height="200"></canvas>
+                                <script>
+                                    var ctx2 = document.getElementById('{{as.ca_id_xml_p|safe}}');
+                                    var myChart2 = new Chart(ctx2, {
+                                        type: 'line',
+                                        data: {
+                                            labels: {{as.words_p|safe}},
+                                            datasets: [{
+                                                label: 'area',
+                                                data: {{as.value_p|safe}},
+                                                backgroundColor: [
+                                                    'rgba(255, 0, 0, 0.5)'
+                                                ],
+                                                borderColor: [
+                                                    'rgba(255, 0, 255, 1)'
+                                                ],
+                                                borderWidth: 1
+                                            }]
+                                        },
+                                        options: {
+                                            scales: {
+                                                yAxes: [{
+                                                    ticks: {
+                                                        beginAtZero: true
+                                                    }
+                                                }]
+                                            },
+                                            title: {
+                                                display: true,
+                                                text:'Stemmed by porter algorithm'
+                                            }
+                                        }
+                                    });
+                                </script>
+                            </li>
+                            <li>
+                                <canvas id="{{as.len_id_xml}}" width="400" height="200"></canvas>
+                                <script>
+                                    var ctx2 = document.getElementById('{{as.len_id_xml|safe}}');
+                                    var myChart2 = new Chart(ctx2, {
+                                        type: 'bar',
+                                        data: {
+                                            labels: ['original_wordset_len','stemmed_wordset_len'],
+                                            datasets: [{
+                                                label: 'compares',
+                                                data: [{{as.wordset_len|safe}},{{as.wordset_p_len|safe}}],
+                                                backgroundColor: [
+                                                    'rgba(0, 0, 255, 0.5)',
+                                                    'rgba(0, 255, 0, 0.5)'
+                                                ],
+                                                borderColor: [
+                                                    'rgba(0, 0, 0, 1)',
+                                                    'rgba(0, 0, 0, 1)'
+
+                                                ],
+                                                borderWidth: 1
+                                            }]
+                                        },
+                                        options: {
+                                            scales: {
+                                                yAxes: [{
+                                                    ticks: {
+                                                        beginAtZero: true
+                                                    }
+                                                }],
+                                                xAxes: [{
+                                                    barPercentage: 0.4
+                                                }]
+                                            },
+                                            title: {
+                                                display: true,
+                                                text:'Compare with 2 words set'
+                                            }
+                                        }
+                                    });
+                                </script>
+                            </li>
+                            <li>未經過斷詞的字詞set長度：{{as.wordset_len|safe}}</li>
+                            <li>經過斷詞後字詞set長度：{{as.wordset_p_len|safe}}</li>
                         </ol>
                     </div>
                     {%endif%}
 
                     {% if type == 'json' %}
-                    <div class="alert alert-success" role="alert" style="color:black;">
+                    <div class="alert alert-light" role="alert" style="color:black;">
                         <h4 class="alert-heading">-關於這篇推文的詳細資訊-</h4>
                         <hr>
                         <ol style="list-style-type:lower-roman;">
@@ -120,6 +192,121 @@
                             <li>內含的url :{% autoescape off %}{{as.http}}{% endautoescape %}</li>
                             {%endif%}
                             <li>有重要的字嗎? {{as.common}}</li>
+                            <li>
+                                <canvas id="{{ as.ca_id_json }}" width="400" height="200"></canvas>
+                                <script>
+                                    var ctx = document.getElementById('{{ as.ca_id_json | safe }}');
+                                    var myChart = new Chart(ctx, {
+                                        type: 'line',
+                                        data: {
+                                            labels: {{as.words|safe}},
+                                            datasets: [{
+                                                label: 'area',
+                                                data: {{as.value|safe}},
+                                                backgroundColor: [
+                                                    'rgba(255, 140, 0, 0.5)'
+                                                ],
+                                                borderColor: [
+                                                    'rgba(255, 0, 255, 1)'
+                                                ],
+                                                borderWidth: 1
+                                            }]
+                                        },
+                                        options: {
+                                            scales: {
+                                                yAxes: [{
+                                                    ticks: {
+                                                        beginAtZero: true
+                                                    }
+                                                }]
+                                            },
+                                            title: {
+                                                display: true,
+                                                text:'The Zipf distribution of this article'
+                                            }
+                                        }
+                                    });
+                                </script>
+                            </li>
+                            <li>
+                                <canvas id="{{ as.ca_id_json_p }}" width="400" height="200"></canvas>
+                                <script>
+                                    var ctx = document.getElementById('{{ as.ca_id_json_p | safe }}');
+                                    var myChart = new Chart(ctx, {
+                                        type: 'line',
+                                        data: {
+                                            labels: {{as.words_p|safe}},
+                                            datasets: [{
+                                                label: 'area',
+                                                data: {{as.value_p|safe}},
+                                                backgroundColor: [
+                                                    'rgba(0, 0, 255, 0.5)'
+                                                ],
+                                                borderColor: [
+                                                    'rgba(255, 0, 255, 1)'
+                                                ],
+                                                borderWidth: 1
+                                            }]
+                                        },
+                                        options: {
+                                            scales: {
+                                                yAxes: [{
+                                                    ticks: {
+                                                        beginAtZero: true
+                                                    }
+                                                }]
+                                            },
+                                            title: {
+                                                display: true,
+                                                text:'Stemmed by porter algorithm'
+                                            }
+                                        }
+                                    });
+                                </script>
+                            </li>
+                            <li>
+                                <canvas id="{{as.len_id_json}}" width="400" height="200"></canvas>
+                                <script>
+                                    var ctx2 = document.getElementById('{{as.len_id_json|safe}}');
+                                    var myChart2 = new Chart(ctx2, {
+                                        type: 'bar',
+                                        data: {
+                                            labels: ['original_wordset_len','stemmed_wordset_len'],
+                                            datasets: [{
+                                                data: [{{as.wordset_len|safe}},{{as.wordset_p_len|safe}}],
+                                                backgroundColor: [
+                                                    'rgba(0, 255, 255, 0.5)',
+                                                    'rgba(255, 255, 0, 0.5)'
+                                                ],
+                                                borderColor: [
+                                                    'rgba(0, 0, 0, 1)',
+                                                    'rgba(0, 0, 0, 1)'
+
+                                                ],
+                                                borderWidth: 1
+                                            }]
+                                        },
+                                        options: {
+                                            scales: {
+                                                yAxes: [{
+                                                    ticks: {
+                                                        beginAtZero: true
+                                                    }
+                                                }],
+                                                xAxes: [{
+                                                    barPercentage: 0.4
+                                                }]
+                                            },
+                                            title: {
+                                                display: true,
+                                                text:'Compare with 2 words set'
+                                            }
+                                        }
+                                    });
+                                </script>
+                            </li>
+                            <li>未經過斷詞的字詞set長度：{{as.wordset_len|safe}}</li>
+                            <li>經過斷詞後字詞set長度：{{as.wordset_p_len|safe}}</li>
                         </ol>
                     </div>
                     {%endif%}
@@ -129,85 +316,4 @@
         {% endfor %}
     </div>
 </section>
-
-
-<!--<div class="panel-group">-->
-<!--    <div class="panel panel-default">-->
-<!--        {% for as in artical_set%}-->
-<!--        <div class="panel-heading">-->
-<!--            <div class="panel-title">-->
-<!--                <a data-toggle="collapse" data-target="#collapse-{{ as.id }}"><h3>-->
-<!--                    <i class="fas fa-chevron-down"></i>-->
-<!--                    <b>{% autoescape off %} {{as.title}} {% endautoescape %}</b>-->
-<!--                </h3>-->
-<!--                </a>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div id="collapse-{{ as.id }}" class="panel-collapse collapse">-->
-<!--            <p>{% autoescape off %} {{as.content}} {% endautoescape %}</p>-->
-
-<!--            {% if type == 'json' %}-->
-<!--            <div class="alert alert-success" role="alert" style="color:black;">-->
-<!--                <h4 class="alert-heading">-關於這篇推文的詳細資訊-</h4>-->
-<!--                <hr>-->
-<!--                <ol style="list-style-type:lower-roman;">-->
-<!--                    <li>這篇推文有 <span style="color:red;">{{as.keyword_content_hit}} </span>個關鍵字</li>-->
-<!--                    <li>這篇推文有 <span style="color:red;">{{as.character_content}} </span>個字元</li>-->
-<!--                    <li>這篇推文有 <span style="color:red;">{{as.word_content}} </span>個詞</li>-->
-<!--                    <li>這篇推文有 <span style="color:red;">{{as.sentence_content}} </span>個句子</li>-->
-<!--                    <li>{{as.wordset}}</li>-->
-<!--                    {% if as.tag != '' %}-->
-<!--                    <li>Hashtag:{% autoescape off %}{{as.tag}}{% endautoescape %}</li>-->
-<!--                    {%endif%}-->
-
-<!--                    {% if as.http != '' %}-->
-<!--                    <li>內含的url :{% autoescape off %}{{as.http}}{% endautoescape %}</li>-->
-<!--                    {%endif%}-->
-<!--                </ol>-->
-<!--            </div>-->
-<!--            {%endif%}-->
-<!--        </div>-->
-<!--        {% endfor %}-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--{% for as in artical_set%}-->
-<!--<div class="card">-->
-<!--    <div class="card-header" id="headingOne">-->
-<!--        <h3><b>{% autoescape off %} {{as.title}} {% endautoescape %}</b>-->
-<!--            <button class="btn btn-primary btn-sm" type="button" data-toggle="collapse"-->
-<!--                    data-target="#collapse-{{ as.id }}">View detail-->
-<!--            </button>-->
-<!--        </h3>-->
-<!--    </div>-->
-
-<!--    <div id="collapse-{{ as.id }}" class="panel-collapse collapse">-->
-<!--        <div class="card-body">-->
-<!--            <p>{% autoescape off %} {{as.content}} {% endautoescape %}</p>-->
-
-<!--            {% if type == 'json' %}-->
-<!--            <div class="alert alert-success" role="alert" style="color:black;">-->
-<!--                <h4 class="alert-heading">-關於這篇推文的詳細資訊-</h4>-->
-<!--                <hr>-->
-<!--                <ol style="list-style-type:lower-roman;">-->
-<!--                    <li>這篇推文有 <span style="color:red;">{{as.keyword_content_hit}} </span>個關鍵字</li>-->
-<!--                    <li>這篇推文有 <span style="color:red;">{{as.character_content}} </span>個字元</li>-->
-<!--                    <li>這篇推文有 <span style="color:red;">{{as.word_content}} </span>個詞</li>-->
-<!--                    <li>這篇推文有 <span style="color:red;">{{as.sentence_content}} </span>個句子</li>-->
-<!--                    <li>{{as.wordset}}</li>-->
-<!--                    {% if as.tag != '' %}-->
-<!--                    <li>Hashtag:{% autoescape off %}{{as.tag}}{% endautoescape %}</li>-->
-<!--                    {%endif%}-->
-
-<!--                    {% if as.http != '' %}-->
-<!--                    <li>內含的url :{% autoescape off %}{{as.http}}{% endautoescape %}</li>-->
-<!--                    {%endif%}-->
-<!--                </ol>-->
-<!--            </div>-->
-<!--            {%endif%}-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--{% endfor %}-->
-
 {% endblock %}
