--- a/ft_retriver/templates/ft_retriver/base2.html
+++ b/ft_retriver/templates/ft_retriver/base2.html
@@ -48,10 +48,6 @@
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="../hello">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="../hello">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>Upload File
                     </a>
                 </li>
@@ -59,6 +55,17 @@
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="../text_distribution">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>Articalset distribution
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="../tf_idf">
+                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>TF-IDF
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="../tf_idf_automatic">
+                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>Auto Keyword
                     </a>
                 </li>
             </ul>
